--- a/package.json
+++ b/package.json
@@ -38,10 +38,16 @@
     "vite": "^2.5.10"
   },
   "dependencies": {
+    "@livekit/components-react": "^2.4.3",
+    "@livekit/components-styles": "^1.0.12",
+    "axios": "^1.7.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "livekit-client": "^2.5.0",
+    "livekit-server-sdk": "^2.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
